--- a/Tobii-EasyClick/TobiiGUI/Properties/Resources.resx
+++ b/Tobii-EasyClick/TobiiGUI/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="bg-red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bg-red.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bg-green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bg-green.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="TI_WindowsLib" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TI-WindowsLib.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
