--- a/Tobii-EasyClick/TobiiGUI/Properties/Resources.resx
+++ b/Tobii-EasyClick/TobiiGUI/Properties/Resources.resx
@@ -124,7 +124,7 @@
   <data name="bg-green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bg-green.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TI_WindowsLib" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TI-WindowsLib.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="TrampzSDK" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TrampzSDK.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
